
- #10735: Uncaught unify exception from `build_as_type`
  (Jacques Garrigue, report and review by Leo White)

- #10763, #10764: fix miscompilation of method delegation
  (Alain Frisch, review by Vincent Laviron and Jacques Garrigue)

- #10822, #10823: Bad interaction between ambivalent types and subtyping
  coercions (Jacques Garrigue, report and review by Frédéric Bour)

- #10849: Display the result of `let _ : <type> = <expr>` in the native
  toplevel, as in the bytecode toplevel.
  (David Allsopp, report by Nathan Rebours, review by Gabriel Scherer)

- #10853: `Obj.reachable_words` could crash if called after a marshaling
  operation in `NO_SHARING` mode.
  (Xavier Leroy, report by Anil Madhavapeddy, review by Alain Frisch)

- #10907, #10959: Wrong type inferred from existential types
  (Jacques Garrigue and Gabriel Scherer, report by @dyzsr, review by Leo White)

OCaml 4.13 maintenance branch
-----------------------------

### Bug fixes

- #10661, #10662: fix a bug with classes named "row"
  (Gabriel Scherer, report by Nicolás Ojeda Bär)


OCaml 4.13.0 (24 September 2021)
--------------------------------

### Progress towards Multicore:

- #10039: Safepoints
  Add poll points to native generated code. These are effectively
  zero-sized allocations and fix some signal and remembered set
  issues. Also multicore prerequisite.
  (Sadiq Jaffer, Stephen Dolan, Damien Doligez, Xavier Leroy,
   Anmol Sahoo, Mark Shinwell, review by Damien Doligez, Xavier Leroy,
   and Mark Shinwell)

- #9876: do not cache the young_limit GC variable in a processor register.
  This affects the ARM64, PowerPC and RISC-V ports, making signal handling
  and minor GC triggers more reliable, at the cost of a small slowdown.
  (Xavier Leroy, review by Nicolás Ojeda Bär)

### Language features (highlights):

- #9584, #7074: Allow to name existentials in pattern-matching
  One can now write '(Cstr (type a) (x, y : int * a))' to give a name to